solve all cases upto 10000 buses in MATPOWER

--- a/milestone1.ipynb
+++ b/milestone1.ipynb
@@ -609,7 +609,7 @@
     "        brf, brr, brid = br\n",
     "        yl, b = 1 / (br_r[brid] + 1j * br_x[brid]), br_b[brid]\n",
     "        tl = tap[brid] * (math.cos(shift[brid]) + 1j * math.sin(shift[brid]))\n",
-    "        yff, ytt, yft, ytf = (yl + 1j * (b/2)) / (tap[brid]**2) , (yl + 1j * (b/2)), - yl / tl.conjugate(), -yl / tl\n",
+    "        yff, ytt, yft, ytf = (yl + 1j * (b/2)) / (tl*tl.conjugate()) , (yl + 1j * (b/2)), - yl / tl.conjugate(), -yl / tl\n",
     "        if not DISABLE_MODEL:\n",
     "            # forward and reverse flows\n",
     "            frm, to = brf[0], brf[1]\n",
@@ -657,7 +657,7 @@
     "    # create problem\n",
     "    prob = cp.Problem(cp.Minimize(obj_fn),constr)\n",
     "    # solve problem and record results\n",
-    "    solvers = ['MOSEK','ECOS','ECOS_BB','SCS']\n",
+    "    solvers = ['MOSEK','ECOS','ECOS_BB','SCS'] # choice of solvers installed on cvxpy\n",
     "    for solver in solvers:\n",
     "        try:\n",
     "            prob.solve(solver=solver,verbose=False)\n",
@@ -716,18 +716,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.13"
   }
  },
  "nbformat": 4,
