--- a/milestone2.ipynb
+++ b/milestone2.ipynb
@@ -224,7 +224,7 @@
     "    # create problem\n",
     "    prob = cp.Problem(cp.Minimize(obj_fn),constr)\n",
     "    # solve problem and record results\n",
-    "    solvers = ['MOSEK','GUROBI','ECOS','ECOS_BB','SCS'] # choice of solvers installed on cvxpy\n",
+    "    solvers = ['MOSEK','GUROBI','SCS','ECOS','ECOS_BB'] # choice of solvers installed on cvxpy\n",
     "    for solver in solvers:\n",
     "        try:\n",
     "            # use 'reoptimize' kw for gurobi\n",
@@ -321,18 +321,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.13"
   }
  },
  "nbformat": 4,
